src/objects/Plant_Code_Master__c/Plant_Code_Master__c.object-meta.xml
<CustomObject>
    <label>Plant Code Master</label>
    <nameField>
        <label>Plant Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Code Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>