src/objects/Plant_Code_Master__c/fields/Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Plant_Name__c</fullName>
    <label>Plant Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>