src/objects/Plant_Code_Master__c/fields/Public_Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Public_Plant_Name__c</fullName>
    <label>Public Plant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>