src/objects/Plant_Code_Master__c/fields/SAP_Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Plant_Code__c</fullName>
    <label>SAP Plant Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>