src/objects/Plant_Code_Master__c/listViews/COM_DEV.listView-meta.xml
<ListView>
    <fullName>COM_DEV</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>SAP_Plant_Code__c</columns>
    <columns>Plant_Name__c</columns>
    <columns>Public_Plant_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Comments__c</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Country_Name__c</columns>
    <columns>SAP_Live__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SAP_Plant_Code__c</field>
        <operation>contains</operation>
        <value>COMDEV</value>
    </filters>
    <label>COM DEV</label>
</ListView>