src/objects/Plant_Code_Master__c/listViews/Owner.listView-meta.xml
<ListView>
    <fullName>Owner</fullName>
    <columns>OWNER.ALIAS</columns>
    <columns>NAME</columns>
    <columns>SAP_Plant_Code__c</columns>
    <columns>Plant_Name__c</columns>
    <columns>Public_Plant_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Comments__c</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Country_Name__c</columns>
    <columns>SAP_Live__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>notContain</operation>
        <value>Admin</value>
    </filters>
    <label>Owner</label>
</ListView>