src/objects/Plant_Code_Master__c/listViews/SAP_Plant.listView-meta.xml
<ListView>
    <fullName>SAP_Plant</fullName>
    <columns>Status__c</columns>
    <columns>SAP_Plant_Code__c</columns>
    <columns>Plant_Name__c</columns>
    <columns>Public_Plant_Name__c</columns>
    <columns>SAP_Go_Live_Date__c</columns>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>Country_Code__c</columns>
    <columns>Country_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>SAP Plant</label>
</ListView>